--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,16 @@
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
         </dependency>
+<!--   jvm 内存站用分析工具     -->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.14</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itlgl</groupId>
+            <artifactId>byteutil</artifactId>
+            <version>0.1.2</version>
+        </dependency>
     </dependencies>
 </project>
