--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
             <version>0.14</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.itlgl</groupId>
